Fixed bottom nav spacing

--- a/src/recipe_page/recipe.css
+++ b/src/recipe_page/recipe.css
@@ -52,7 +52,7 @@ h1 {
     width: 100%;
     height: 240px;
     border-radius: 12px;
-    margin-top: 25px;
+    margin-top: 15px;
 }
 
 .recipe-image img {
@@ -139,7 +139,6 @@ h1 {
     height: 70px;
     border-radius: 12px;
     display: flex;
-    margin-top: 68%;
 }
 
 .bottom-nav-container section {
